@@ -46,8 +46,3 @@
 
  - 2-factor authentication
 	- Authy?
-
- - Rackspace cloud files regions
-	- Cloudmin too
-	- http://www.rackspace.com/blog/cloud-files-adds-multi-region-support/
-	- http://virtualmin.com/node/28964
