@@ -163,7 +163,7 @@ ssh_args=Additonal parameters to ssh and scp commands,0
 s3_endpoint=S3-compatible server hostname,3,Use Amazon S3
 s3_akey=Default S3 access key for backups,3,None,60
 s3_skey=Default S3 secret key for backups,3,None,60
-rs_endpoint=Rackspace API URL,10,https://identity.api.rackspacecloud.com/v1.0-US default,https://lon.auth.api.rackspacecloud.com/v1.0-UK default,Other
+rs_endpoint=Rackspace API URL,10,https://identity.api.rackspacecloud.com/v1.0-US default,https://lon.auth.api.rackspacecloud.com/v1.0-UK default,https://identity.api.rackspacecloud.com/v1.0;DFW-US Dallas,https://identity.api.rackspacecloud.com/v1.0;ORD-US Chicago,Other
 rs_user=Default Rackspace username for backups,3,None
 rs_key=Default Rackspace API key for backups,3,None
 rs_snet=Use internal Rackspace network servers?,1,1-Yes,0-No
